--- a/src/app/components/dashboard-checkbox/dashboard-checkbox.component.html
+++ b/src/app/components/dashboard-checkbox/dashboard-checkbox.component.html
@@ -5,8 +5,8 @@
 </p>
 <ng-container [formGroup]="fg">
   <p formArrayName="array">
-    <mat-checkbox [formControlName]="index"
-                  *ngFor="let item of selects; let index = index"
+    <mat-checkbox *ngFor="let item of selects; let index = index"
+                  [formControlName]="index"
     >{{ item.label }}</mat-checkbox>
   </p>
 </ng-container>
