--- a/src/app/components/dashboard-radio/dashboard-radio.component.html
+++ b/src/app/components/dashboard-radio/dashboard-radio.component.html
@@ -1,8 +1,10 @@
 <p>
-  <mat-label><ng-content></ng-content></mat-label>
+  <mat-label>
+    <ng-content></ng-content>
+  </mat-label>
 </p>
 <p>
-  <mat-radio-group aria-label="Select an option" [formControl]="fc">
-    <mat-radio-button [value]="item.value" *ngFor="let item of selects">{{ item.label }}</mat-radio-button>
+  <mat-radio-group [formControl]="fc" aria-label="Select an option">
+    <mat-radio-button *ngFor="let item of selects" [value]="item.value">{{ item.label }}</mat-radio-button>
   </mat-radio-group>
 </p>
