--- a/src/app/modules/tenant/components/tenant-cast-detail/tenant-cast-detail.component.html
+++ b/src/app/modules/tenant/components/tenant-cast-detail/tenant-cast-detail.component.html
@@ -1,13 +1,14 @@
 <ng-container *ngIf="detail$ | async as detail">
   <app-dashboard-header prevRouterLink="../">キャスト: {{ detail.display_name }}</app-dashboard-header>
   <mat-card>
-    <form [formGroup]="fg" (ngSubmit)="onSub(detail.id)">
+    <form (ngSubmit)="onSub(detail.id)" [formGroup]="fg">
       <mat-card-content>
         <app-dashboard-select
+          [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
           formControlName="publish"
           name="publish"
-          [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
-        >公開ステータス</app-dashboard-select>
+        >公開ステータス
+        </app-dashboard-select>
 
         <app-dashboard-input
           formControlName="display_name"
@@ -22,15 +23,15 @@
         >名前検索用（かな）
         </app-dashboard-input>
         <app-dashboard-select
+          [selects]="originalSelects"
           formControlName="is_use_original_image"
           name="is_use_original_image"
-          [selects]="originalSelects"
         >画像選択
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="mosaicSelects"
           formControlName="is_opened_face"
           name="is_opened_face"
-          [selects]="mosaicSelects"
         >顔出し
         </app-dashboard-select>
 
@@ -40,12 +41,12 @@
             <mat-label>画像を追加</mat-label>
           </p>
           <p>
-            <input type="file" multiple name="image" (change)="onChangeFiles(imageFileInput.files)" #imageFileInput>
+            <input #imageFileInput (change)="onChangeFiles(imageFileInput.files)" multiple name="image" type="file">
           </p>
           <ng-container *ngFor="let image of files; let index = index">
             <p>
               <img *ngIf="fileUrls && fileUrls[index]" [src]="fileUrls[index]" alt="">
-              <button type="button" mat-button mat-icon-button (click)="onDeleteFile(index)">
+              <button (click)="onDeleteFile(index)" mat-button mat-icon-button type="button">
                 <mat-icon>close</mat-icon>
               </button>
             </p>
@@ -53,103 +54,103 @@
               <mat-label>画像を変更</mat-label>
             </p>
             <p>
-              <input type="file" name="image"
-                     (change)="onChangeFile(index, imageFileInput.files ? imageFileInput.files[0] : null)"
-                     #imageFileInput>
+              <input #imageFileInput (change)="onChangeFile(index, imageFileInput.files ? imageFileInput.files[0] : null)"
+                     name="image"
+                     type="file">
             </p>
           </ng-container>
         </ng-container>
 
         <app-dashboard-select
+          [selects]="ageSelects"
           formControlName="age"
           name="age"
-          [selects]="ageSelects"
         >年齢
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="heightSelects"
           formControlName="height"
           name="height"
-          [selects]="heightSelects"
         >身長
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="bustSelects"
           formControlName="bust"
           name="bust"
-          [selects]="bustSelects"
         >B
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="cupSelects"
           formControlName="cup"
           name="cup"
-          [selects]="cupSelects"
         >カップ
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="waistSelects"
           formControlName="waist"
           name="waist"
-          [selects]="waistSelects"
         >W
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="hipSelects"
           formControlName="hip"
           name="hip"
-          [selects]="hipSelects"
         >H
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="bloodSelects"
           formControlName="blood_type"
           name="blood_type"
-          [selects]="bloodSelects"
         >血液型
         </app-dashboard-select>
 
         <app-dashboard-checkbox
-          formControlName="types"
           [selects]="typesSelects"
+          formControlName="types"
         >タイプ
         </app-dashboard-checkbox>
 
         <app-dashboard-select
+          [selects]="styleSelects"
           formControlName="style"
           name="style"
-          [selects]="styleSelects"
         >スタイル
         </app-dashboard-select>
 
         <app-dashboard-select
+          [selects]="doSelects"
           formControlName="is_smoker"
           name="is_smoker"
-          [selects]="doSelects"
         >喫煙
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="booleanWithNullSelects"
           formControlName="is_irezumi"
           name="is_irezumi"
-          [selects]="booleanWithNullSelects"
         >入墨
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="booleanWithNullSelects"
           formControlName="is_tattoo"
           name="is_tattoo"
-          [selects]="booleanWithNullSelects"
         >タトゥー
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="yesOrNoSelects"
           formControlName="is_shiohuki"
           name="is_shiohuki"
-          [selects]="yesOrNoSelects"
         >潮吹き
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="yesOrNoSelects"
           formControlName="is_paipan"
           name="is_paipan"
-          [selects]="yesOrNoSelects"
         >パイパン
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="yesOrNoSelects"
           formControlName="is_pregnant"
           name="is_pregnant"
-          [selects]="yesOrNoSelects"
         >妊婦
         </app-dashboard-select>
 
@@ -158,17 +159,17 @@
           <mat-grid-list [cols]="2" rowHeight="80">
             <mat-grid-tile>
               <app-dashboard-select
+                [selects]="monthSelects"
                 formControlName="birth_month"
                 name="birth_month"
-                [selects]="monthSelects"
               >月
               </app-dashboard-select>
             </mat-grid-tile>
             <mat-grid-tile>
               <app-dashboard-select
+                [selects]="dateSelects"
                 formControlName="birth_date"
                 name="birth_date"
-                [selects]="dateSelects"
               >日
               </app-dashboard-select>
             </mat-grid-tile>
@@ -186,9 +187,9 @@
         >似ている芸能人（かな）
         </app-dashboard-input>
         <app-dashboard-select
+          [selects]="smSelects"
           formControlName="sm_barometer"
           name="sm_barometer"
-          [selects]="smSelects"
         >SMバロメーター
         </app-dashboard-select>
         <app-dashboard-textarea
@@ -197,9 +198,9 @@
         >メッセージ
         </app-dashboard-textarea>
         <app-dashboard-select
+          [selects]="useSelects"
           formControlName="is_use_photo_diary"
           name="is_use_photo_diary"
-          [selects]="useSelects"
         >写メール日記
         </app-dashboard-select>
         <app-dashboard-input
@@ -208,21 +209,21 @@
         >ログインID
         </app-dashboard-input>
         <app-dashboard-input
+          [isPassword]="true"
           formControlName="password"
           name="password"
-          [isPassword]="true"
         >パスワード
         </app-dashboard-input>
         <app-dashboard-select
+          [selects]="useSelects"
           formControlName="is_use_video_diary"
           name="is_use_video_diary"
-          [selects]="useSelects"
         >写メ動画
         </app-dashboard-select>
         <app-dashboard-select
+          [selects]="useSelects"
           formControlName="is_use_fan_letter"
           name="is_use_fan_letter"
-          [selects]="useSelects"
         >ファンレター
         </app-dashboard-select>
 
@@ -234,47 +235,47 @@
             <mat-grid-tile [colspan]="2"></mat-grid-tile>
             <mat-grid-tile [colspan]="2">
               <app-dashboard-textarea
-                [name]="'title-' + (index + 1)"
-                formControlName="title"
-                [rows]="5"
                 [autoResize]="false"
+                [name]="'title-' + (index + 1)"
+                [rows]="5"
+                formControlName="title"
               >
                 タイトル{{ index + 1 }}
               </app-dashboard-textarea>
             </mat-grid-tile>
             <mat-grid-tile [colspan]="2">
               <app-dashboard-textarea
-                [name]="'detail-' + (index + 1)"
-                formControlName="detail"
-                [rows]="5"
                 [autoResize]="false"
+                [name]="'detail-' + (index + 1)"
+                [rows]="5"
+                formControlName="detail"
               >
                 本文{{ index + 1 }}
               </app-dashboard-textarea>
             </mat-grid-tile>
             <mat-grid-tile [colspan]="1">
-              <button *ngIf="detailsFormArray.length > 1" type="button" mat-button mat-icon-button
-                      (click)="detailsFormArray.removeAt(index)">
+              <button (click)="detailsFormArray.removeAt(index)" *ngIf="detailsFormArray.length > 1" mat-button mat-icon-button
+                      type="button">
                 <mat-icon>close</mat-icon>
               </button>
             </mat-grid-tile>
           </ng-container>
         </mat-grid-list>
         <p *ngIf="detailsFormArray.length < detailFormArrayMax">
-          <button type="button" mat-flat-button color="accent" (click)="onPushDetail()">項目を追加</button>
+          <button (click)="onPushDetail()" color="accent" mat-flat-button type="button">項目を追加</button>
         </p>
 
 
         <app-dashboard-checkbox
-          formControlName="services"
           [selects]="servicesSelects"
+          formControlName="services"
         >可能サービス
         </app-dashboard-checkbox>
 
 
       </mat-card-content>
       <mat-card-actions align="end">
-        <button mat-raised-button color="primary" [disabled]="fg.invalid">更新</button>
+        <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
       </mat-card-actions>
     </form>
   </mat-card>
