--- a/src/app/modules/tenant/components/tenant-free-image-detail/tenant-free-image-detail.component.html
+++ b/src/app/modules/tenant/components/tenant-free-image-detail/tenant-free-image-detail.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="detail$ | async as detail">
   <app-dashboard-header prevRouterLink="../">フリー画像: {{ detail.title }}</app-dashboard-header>
   <mat-card>
-    <form [formGroup]="fg" (ngSubmit)="onSub(detail.id)">
+    <form (ngSubmit)="onSub(detail.id)" [formGroup]="fg">
       <mat-card-content>
         <app-dashboard-select
+          [selects]="imageType$ | async"
           formControlName="tenant_free_image_type_id"
           name="tenant_free_image_type_id"
-          [selects]="imageType$ | async"
         >
           コンテンツ
         </app-dashboard-select>
@@ -21,11 +21,11 @@
         <p>
           <mat-label>画像</mat-label>
           <img *ngIf="fileUrl" [src]="fileUrl" alt="">
-          <input type="file" name="image" (change)="onChangeFile()" #imageFileInput>
+          <input #imageFileInput (change)="onChangeFile()" name="image" type="file">
         </p>
       </mat-card-content>
       <mat-card-actions align="end">
-        <button mat-raised-button color="primary" [disabled]="fg.invalid">更新</button>
+        <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
       </mat-card-actions>
     </form>
   </mat-card>
