--- a/src/app/components/dashboard-header/dashboard-header.component.html
+++ b/src/app/components/dashboard-header/dashboard-header.component.html
@@ -1,15 +1,15 @@
 <header>
   <h2 class="headline">
-    <button *ngIf="prevRouterLink" mat-icon-button mat-flat-button color="accent" [routerLink]="prevRouterLink">
+    <button *ngIf="prevRouterLink" [routerLink]="prevRouterLink" color="accent" mat-flat-button mat-icon-button>
       <mat-icon>arrow_back</mat-icon>
     </button>
     <span><ng-content></ng-content></span>
   </h2>
   <div class="spacer"></div>
-  <div class="actions" *ngIf="rightRouterLink">
+  <div *ngIf="rightRouterLink" class="actions">
     <div class="button">
       <a [routerLink]="rightRouterLink">
-        <button mat-flat-button color="primary">新規</button>
+        <button color="primary" mat-flat-button>新規</button>
       </a>
     </div>
   </div>
