--- a/src/app/modules/operation/components/operation-app-container/operation-app-container.component.html
+++ b/src/app/modules/operation/components/operation-app-container/operation-app-container.component.html
@@ -10,7 +10,7 @@
         <mat-toolbar color="primary">
           <span matRipple routerLink="/operation">運営管理画面</span>
           <div class="spacer"></div>
-          <button mat-raised-button color="accent" routerLink="/tenant">店舗管理画面へ</button>
+          <button color="accent" mat-raised-button routerLink="/tenant">店舗管理画面へ</button>
         </mat-toolbar>
       </div>
       <div class="router-container">
