--- a/src/app/modules/tenant/components/tenant-free-banner-detail/tenant-free-banner-detail.component.html
+++ b/src/app/modules/tenant/components/tenant-free-banner-detail/tenant-free-banner-detail.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="detail$ | async as detail">
   <app-dashboard-header prevRouterLink="../">フリーバナー: {{ detail.title }}</app-dashboard-header>
   <mat-card>
-    <form [formGroup]="fg" (ngSubmit)="onSub(detail.id)">
+    <form (ngSubmit)="onSub(detail.id)" [formGroup]="fg">
       <mat-card-content>
         <app-dashboard-select
+          [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
           formControlName="publish"
           name="publish"
-          [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
         ></app-dashboard-select>
 
         <app-dashboard-input
@@ -18,9 +18,9 @@
 
 
         <app-dashboard-select
+          [selects]="displaySpaces$ | async"
           formControlName="tenant_free_banner_display_space_id"
           name="tenant_free_banner_display_space_id"
-          [selects]="displaySpaces$ | async"
         ></app-dashboard-select>
 
         <ng-container formArrayName="images">
@@ -29,12 +29,12 @@
             <mat-label>画像を追加</mat-label>
           </p>
           <p>
-            <input type="file" multiple name="image" (change)="onChangeFiles(imageFileInput.files)" #imageFileInput>
+            <input #imageFileInput (change)="onChangeFiles(imageFileInput.files)" multiple name="image" type="file">
           </p>
           <ng-container *ngFor="let image of files; let index = index" [formGroupName]="index">
             <p>
               <img *ngIf="fileUrls && fileUrls[index]" [src]="fileUrls[index]" alt="">
-              <button type="button" mat-button mat-icon-button (click)="onDeleteFile(index)">
+              <button (click)="onDeleteFile(index)" mat-button mat-icon-button type="button">
                 <mat-icon>close</mat-icon>
               </button>
             </p>
@@ -42,44 +42,45 @@
               <mat-label>画像を変更</mat-label>
             </p>
             <p>
-              <input type="file" name="image"
-                     (change)="onChangeFile(index, imageFileInput.files ? imageFileInput.files[0] : null)"
-                     #imageFileInput>
+              <input #imageFileInput (change)="onChangeFile(index, imageFileInput.files ? imageFileInput.files[0] : null)"
+                     name="image"
+                     type="file">
             </p>
             <p>
               <app-dashboard-radio
                 [formControl]="linkFCs[index]"
                 [selects]="linkSelects"
-              >リンク先</app-dashboard-radio>
+              >リンク先
+              </app-dashboard-radio>
             </p>
             <ng-container *ngIf="linkFCs[index].value === 'cast'">
               <app-dashboard-select
-                formControlName="cast_id"
                 [selects]="castsSelects$ | async"
+                formControlName="cast_id"
               ></app-dashboard-select>
 
               <app-dashboard-select
                 *ngIf="castLinkTypeEnabled[index]"
-                formControlName="cast_link_type_id"
                 [selects]="castLinkTypesSelects[index]"
+                formControlName="cast_link_type_id"
               ></app-dashboard-select>
             </ng-container>
             <ng-container *ngIf="linkFCs[index].value === 'tenant'">
               <app-dashboard-select
-                formControlName="tenant_link_type_id"
                 [selects]="tenantLinkTypesSelects$ | async"
+                formControlName="tenant_link_type_id"
               ></app-dashboard-select>
 
               <app-dashboard-select
                 *ngIf="freeGalleryEnabled[index]"
-                formControlName="tenant_free_gallery_id"
                 [selects]="galleriesSelects$ | async"
+                formControlName="tenant_free_gallery_id"
               ></app-dashboard-select>
 
               <app-dashboard-select
                 *ngIf="foreignLinkEnabled[index]"
-                formControlName="foreign_link_id"
                 [selects]="foreignLinks$ | async"
+                formControlName="foreign_link_id"
               ></app-dashboard-select>
             </ng-container>
             <ng-container>
@@ -95,7 +96,7 @@
 
       </mat-card-content>
       <mat-card-actions align="end">
-        <button mat-raised-button color="primary" [disabled]="fg.invalid">更新</button>
+        <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
       </mat-card-actions>
     </form>
   </mat-card>
