--- a/src/app/modules/tenant/components/tenant-free-gallery-create/tenant-free-gallery-create.component.html
+++ b/src/app/modules/tenant/components/tenant-free-gallery-create/tenant-free-gallery-create.component.html
@@ -1,11 +1,11 @@
 <app-dashboard-header prevRouterLink="../">フリーギャラリー</app-dashboard-header>
 <mat-card>
-  <form [formGroup]="fg" (ngSubmit)="onSub()">
+  <form (ngSubmit)="onSub()" [formGroup]="fg">
     <mat-card-content>
       <app-dashboard-select
+        [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
         formControlName="publish"
         name="publish"
-        [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
       ></app-dashboard-select>
 
       <app-dashboard-input
@@ -21,12 +21,12 @@
         </p>
         <p *ngFor="let image of files; let index = index">
           <img *ngIf="fileUrls && fileUrls[index]" [src]="fileUrls[index]" alt="">
-          <button type="button" mat-button mat-icon-button (click)="onDeleteFile(index)">
+          <button (click)="onDeleteFile(index)" mat-button mat-icon-button type="button">
             <mat-icon>close</mat-icon>
           </button>
         </p>
         <p>
-          <input type="file" multiple name="image" (change)="onChangeFile()" #imageFileInput>
+          <input #imageFileInput (change)="onChangeFile()" multiple name="image" type="file">
         </p>
         <p>
           <mat-divider></mat-divider>
@@ -42,7 +42,7 @@
 
     </mat-card-content>
     <mat-card-actions align="end">
-      <button mat-raised-button color="primary" [disabled]="fg.invalid">作成</button>
+      <button [disabled]="fg.invalid" color="primary" mat-raised-button>作成</button>
     </mat-card-actions>
   </form>
 </mat-card>
