--- a/src/app/modules/tenant/components/tenant-free-gallery-detail/tenant-free-gallery-detail.component.html
+++ b/src/app/modules/tenant/components/tenant-free-gallery-detail/tenant-free-gallery-detail.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="detail$ | async as detail">
   <app-dashboard-header prevRouterLink="../">フリーギャラリー: {{ detail.title }}</app-dashboard-header>
   <mat-card>
-    <form [formGroup]="fg" (ngSubmit)="onSub(detail.id)">
+    <form (ngSubmit)="onSub(detail.id)" [formGroup]="fg">
       <mat-card-content>
         <app-dashboard-select
+          [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
           formControlName="publish"
           name="publish"
-          [selects]="[{value: '1', label: '公開'}, {value: '0', label: '非公開'}]"
         ></app-dashboard-select>
 
         <app-dashboard-input
@@ -22,12 +22,12 @@
           </p>
           <p *ngFor="let image of files; let index = index">
             <img *ngIf="fileUrls && fileUrls[index]" [src]="fileUrls[index]" alt="">
-            <button type="button" mat-button mat-icon-button (click)="onDeleteFile(index)">
+            <button (click)="onDeleteFile(index)" mat-button mat-icon-button type="button">
               <mat-icon>close</mat-icon>
             </button>
           </p>
           <p>
-            <input type="file" multiple name="image" (change)="onChangeFile()" #imageFileInput>
+            <input #imageFileInput (change)="onChangeFile()" multiple name="image" type="file">
           </p>
           <p>
             <mat-divider></mat-divider>
@@ -43,7 +43,7 @@
 
       </mat-card-content>
       <mat-card-actions align="end">
-        <button mat-raised-button color="primary" [disabled]="fg.invalid">更新</button>
+        <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
       </mat-card-actions>
     </form>
   </mat-card>
