--- a/src/app/modules/tenant/components/tenant-free-space-create/tenant-free-space-create.component.html
+++ b/src/app/modules/tenant/components/tenant-free-space-create/tenant-free-space-create.component.html
@@ -1,6 +1,6 @@
 <app-dashboard-header prevRouterLink="../">フリースペース</app-dashboard-header>
 <mat-card>
-  <form [formGroup]="fg" (ngSubmit)="onSub()">
+  <form (ngSubmit)="onSub()" [formGroup]="fg">
     <mat-card-content>
       <app-dashboard-input
         formControlName="title"
@@ -10,30 +10,30 @@
       </app-dashboard-input>
 
       <app-dashboard-select
-        formControlName="editable_text_type_id"
-        name="editable_text_type_id"
-        label="表示形式"
         [selects]="types$ | async"
+        formControlName="editable_text_type_id"
+        label="表示形式"
+        name="editable_text_type_id"
       >
         表示形式
       </app-dashboard-select>
 
       <app-dashboard-textarea
+        *ngIf="currentType === 'plain'"
         formControlName="content"
         name="content"
-        *ngIf="currentType === 'plain'"
       >
         内容
       </app-dashboard-textarea>
       <app-dashboard-editor
-        formControlName="content"
         *ngIf="currentType === 'html'"
+        formControlName="content"
       >内容
       </app-dashboard-editor>
 
     </mat-card-content>
     <mat-card-actions align="end">
-      <button mat-raised-button color="primary" [disabled]="fg.invalid">作成</button>
+      <button [disabled]="fg.invalid" color="primary" mat-raised-button>作成</button>
     </mat-card-actions>
   </form>
 </mat-card>
