--- a/src/app/modules/tenant/components/tenant-free-space-detail/tenant-free-space-detail.component.html
+++ b/src/app/modules/tenant/components/tenant-free-space-detail/tenant-free-space-detail.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="detail$ | async as detail">
   <app-dashboard-header prevRouterLink="../">フリースペース: {{ detail.title }}</app-dashboard-header>
   <mat-card>
-    <form [formGroup]="fg" (ngSubmit)="onSub(detail.id)">
+    <form (ngSubmit)="onSub(detail.id)" [formGroup]="fg">
       <mat-card-content>
         <app-dashboard-input
           formControlName="title"
@@ -11,29 +11,29 @@
         </app-dashboard-input>
 
         <app-dashboard-select
-          formControlName="editable_text_type_id"
-          name="editable_text_type_id"
-          label="表示形式"
           [selects]="types$ | async"
+          formControlName="editable_text_type_id"
+          label="表示形式"
+          name="editable_text_type_id"
         >
           表示形式
         </app-dashboard-select>
 
         <app-dashboard-textarea
+          *ngIf="currentType === 'plain'"
           formControlName="content"
           name="content"
-          *ngIf="currentType === 'plain'"
         >
           内容
         </app-dashboard-textarea>
         <app-dashboard-editor
-          formControlName="content"
           *ngIf="currentType === 'html'"
+          formControlName="content"
         >内容
         </app-dashboard-editor>
       </mat-card-content>
       <mat-card-actions align="end">
-        <button mat-raised-button color="primary" [disabled]="fg.invalid">更新</button>
+        <button [disabled]="fg.invalid" color="primary" mat-raised-button>更新</button>
       </mat-card-actions>
     </form>
   </mat-card>
