--- a/src/app/modules/tenant/components/tenant-staff-create/tenant-staff-create.component.html
+++ b/src/app/modules/tenant/components/tenant-staff-create/tenant-staff-create.component.html
@@ -1,27 +1,27 @@
 <app-dashboard-header prevRouterLink="../">スタッフ作成</app-dashboard-header>
 <mat-card>
-  <form [formGroup]="fg" (ngSubmit)="onSub()">
+  <form (ngSubmit)="onSub()" [formGroup]="fg">
     <mat-card-content>
       <p>
         <mat-form-field appearance="fill" hintLabel="1 - 16文字">
           <mat-label>ログインID</mat-label>
-          <input type="text" name="login_id" min="1" max="16" matInput formControlName="login_id">
+          <input formControlName="login_id" matInput max="16" min="1" name="login_id" type="text">
         </mat-form-field>
       </p>
       <p>
         <mat-form-field appearance="fill" hintLabel="8 - 100文字">
           <mat-label>パスワード</mat-label>
-          <input matInput min="8" max="100" [type]="hidePassword ? 'password' : 'text'" formControlName="password"
-                 autocomplete="new-password">
-          <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'"
-                  [attr.aria-pressed]="hidePassword">
+          <input [type]="hidePassword ? 'password' : 'text'" autocomplete="new-password" formControlName="password" matInput max="100"
+                 min="8">
+          <button (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword" mat-icon-button
+                  matSuffix>
             <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
         </mat-form-field>
       </p>
     </mat-card-content>
     <mat-card-actions align="end">
-      <button mat-raised-button color="primary" [disabled]="fg.invalid">作成</button>
+      <button [disabled]="fg.invalid" color="primary" mat-raised-button>作成</button>
     </mat-card-actions>
   </form>
 </mat-card>
